# forge_edu

./: .gitignore  Labs.md  README.md  hoare.md  math.md  other.md  tasks.md
async/csharp/: Program.cs
bitcoin/rust/: Cargo.toml
bratko/: ch2.pl  test2
c/: README.md
c/fractal-cpp/: main.cpp
c/hello-world/: hello-world  hello-world.c  hello1.c
c/math/: main.c  mathbasic.c
c/math-func/: gcd.c  hoaresort.c  main.c  mathfunc.c  recursion.c
c/newtonfractal/: Complex.cpp  Complex.h  CoordPlane.cpp  CoordPlane.h  Makefile  main.cpp
c/stdin-stdout-cpp/: inout.cpp
clang/: main.c
clojure/: CHANGELOG.md  README.md  project.clj
dotnet/: README.md
elixir/: README.md  action.exs  binary_search.exs  doroga.ex  rpn.ex
elm/: README.md
erlang/: README.md  ex3.erl
func_prog/: lab.lisp  lab.rkt
go/: README.md
haskell/: hello  hello.hs  triads.hs
info3/: A9.txt  B9.txt  README.md  bubble.c  cort.cpp  gauss2.c  progonka.c  readme.md
kernighan-ritchie/: ch-1.10.c  ch-1.2.c  ch-1.5.c  ch-1.6.c  ch-1.9.c  ch-2.2.c
kotlin/: README.md
labs/: README.md  main.c
lisp/: README.md
mercury/: README.md
otp/: addr.erl  echo.erl  ex1.erl  ex2.erl  frequency.erl  frequency_all.erl  hlr.erl  queens.erl  server.erl
prolog/: README.md
racket/: ch1.rkt  hello.rkt  proj2.scm
rust/: README.md
rust/types/: Cargo.toml
rust/types/pkg/: package.json  types.d.ts  types.js  types_bg.wasm  wasm_types.js  wasm_types_bg.wasm
rust/types/src/: complex.rs  complex_f64.rs  lib.rs
sandbox/rust/threads/: Cargo.toml
sml/: README.md
week_2/: README.md
(+353 files in other folders)
