[package]
name = "wasm-types"
version = "0.1.0"
authors = ["Ilya Druzhinin <ilya.druzh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/IlyaDruzhinin/wasm-types"

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]