[package]
name = "raytrace-parallel"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.1"
js-sys = "0.3.5"
wasm-bindgen = { version = "0.2.28", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.3.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
